--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -38,7 +38,7 @@
     align-items: center;
     -webkit-flex: 1 0 0;
     flex: 1 0 0;
-    padding: 10px 20px;
+    padding: 10px 10px;
  }
  
  .ms-welcome__main > h2 {
@@ -73,6 +73,14 @@
 .ms-Button.ms-Button--hero:focus .ms-Button-label{
   color: #005a9e;
   cursor: pointer;
+}
+
+.ms-Button {
+    margin: 1rem
+}
+
+.ms-font-l {
+    margin: 1rem
 }
 
 b {
